--- a/style.css
+++ b/style.css
@@ -126,14 +126,14 @@ body, html
     background: linear-gradient(rgb(139, 24, 139), #41132c);
 }
 
-#score_text
-{
-    font-size: 1.2rem;
-}
-
-#level
+#score
 {
     margin-bottom: 0.5rem;
+}
+
+#score_text
+{
+    font-size: 1.8rem;
 }
 
 #level_text
