--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body, html
 
 #main
 {
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
 }
@@ -22,7 +22,7 @@ body, html
     display: grid;
     width: fit-content;
     height: fit-content;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr -1fr;
     grid-template-rows: 0fr 0fr 0fr;
     grid-template-areas:
         "... topbar ... ..."
@@ -30,6 +30,7 @@ body, html
             "main main main ..."
             "main main main ...";
     margin-top: 100px;
+    justify-items: center;
 }
 
 #game
@@ -39,7 +40,6 @@ body, html
     width: 360px;
     height: 720px;
     overflow: hidden;
-
     grid-area: main;
     display: grid;
     grid-template-columns: 1fr;
@@ -48,8 +48,12 @@ body, html
 
 #sidebar
 {
-    margin-left: 1rem;
+    margin-left: 0.5rem;
     grid-area: sidebar;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 #topbar
@@ -128,17 +132,26 @@ body, html
 
 #score
 {
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.8rem;
 }
 
 #score_text
 {
-    font-size: 1.8rem;
+    font-size: 1.7rem;
 }
 
-#level_text
+#info
 {
-    font-size: 1.2rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.1rem;
+}
+
+#menu
+{
+    cursor: pointer;
 }
 
 .cleared_piece
@@ -148,7 +161,12 @@ body, html
     animation: fade_out 10ms linear forwards;
 }
 
-.next_piece
+#next_pieces
+{
+    margin-bottom: 0.8rem;
+}
+
+.next_piece, #active_piece
 {
     width: 100px;
     height: 100px;
@@ -156,6 +174,17 @@ body, html
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 0.5rem;
+}
+
+.next_piece:last-child
+{
+    margin-bottom: 0;
+}
+
+#active_piece
+{
+    box-shadow: inset 0 0 30px rgb(204, 204, 204); 
 }
 
 .next_piece_element
@@ -179,4 +208,155 @@ body, html
     {
         opacity: 0;
     }
+}
+
+#intro
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    background-color: #2D2B2C;
+}
+
+#intro_image
+{
+    position: relative;
+    max-width: 70%;
+    max-height: 70%;
+}
+
+#intro_info
+{
+    font-size: 1.4rem;
+    animation: blink 1.2s linear infinite;
+    margin-bottom: 1rem;
+}
+
+#intro_credits
+{
+    text-align: center;
+    width: 20rem;
+    font-size: 12px;
+}
+
+@keyframes blink
+{
+    0%{opacity:1}
+    50%{opacity:0.2}
+    100%{opacity:1}
+}
+
+#music
+{
+    display: none;
+}
+
+.unselectable
+{
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.Msg-window
+{
+    background-color: #353535 !important;
+    color: #cbcbcb !important;
+}
+
+.Msg-window-inner-x:hover
+{
+    background-color: #4d4d4d !important
+}
+
+#menu_container
+{
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.menu_item
+{
+    font-size: 1.4rem;
+    margin-bottom: 0.8rem;
+    cursor: pointer;
+}
+
+.menu_item:last-child
+{
+    margin-bottom: 0;
+}
+
+.action
+{
+    transition: text-shadow 500ms, box-shadow 500ms
+}
+
+.action:hover
+{
+    text-shadow: 0 0 1em currentColor;
+}
+
+#options_container
+{
+    min-width: 10rem;
+}
+
+.options_number
+{
+    width: 4rem;
+    text-align: center;
+}
+
+.options_checkbox
+{
+    width: 1rem;
+    height: 1rem;
+    text-align: center;
+}
+
+.options_item
+{
+    margin-bottom: 2rem;
+}
+
+.options_item:last-child
+{
+    margin-bottom: 0;
+}
+
+.options_label
+{
+    margin-bottom: 0.5rem;
+}
+
+.horizontal_separator
+{
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+}
+
+#help_container
+{
+    max-width: 28rem;
+    font-size: 1.2rem;
+}
+
+.help_item
+{
+    margin-bottom: 1rem;
+}
+
+.help_item:last-child
+{
+    margin-bottom: 0;
 }
