--- a/style.css
+++ b/style.css
@@ -33,17 +33,23 @@ body, html
     justify-items: center;
 }
 
-#game
+#game_container
 {
     position: relative;
-    background-color: #2f3237;
-    width: 360px;
-    height: 720px;
-    overflow: hidden;
     grid-area: main;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
+    overflow: hidden;
+    width: fit-content;
+    height: fit-content;
+}
+
+#game
+{
+    position: relative;
+    background-color: #2f3237;
+    overflow: hidden;
 }
 
 #sidebar
@@ -58,7 +64,7 @@ body, html
 
 #topbar
 {
-    margin-bottom: 1.4rem;
+    margin-bottom: 1rem;
     grid-area: topbar;
     text-align: center;
 }
@@ -149,6 +155,19 @@ body, html
     font-size: 1.1rem;
 }
 
+#info2
+{
+    margin-top: 0.8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#seed_text
+{
+    cursor: pointer;
+}
+
 #menu
 {
     cursor: pointer;
@@ -229,13 +248,6 @@ body, html
     max-height: 70%;
 }
 
-#intro_info
-{
-    font-size: 1.4rem;
-    animation: blink 1.2s linear infinite;
-    margin-bottom: 1rem;
-}
-
 #intro_credits
 {
     text-align: center;
@@ -247,7 +259,7 @@ body, html
 {
     0%{opacity:1}
     50%{opacity:0.2}
-    100%{opacity:1}
+    80%{opacity:1}
 }
 
 #music
@@ -324,6 +336,12 @@ body, html
     text-align: center;
 }
 
+.options_text
+{
+    width: 8rem;
+    text-align: center;
+}
+
 .options_item
 {
     margin-bottom: 2rem;
@@ -359,4 +377,68 @@ body, html
 .help_item:last-child
 {
     margin-bottom: 0;
+}
+
+::-webkit-scrollbar
+{
+    width: 8px;
+}
+
+::-webkit-scrollbar-track-piece
+{
+    background-color: transparent !important;
+}
+
+::-webkit-scrollbar-thumb
+{
+    background-color: #767676 !important;
+}
+
+body *
+{
+    scrollbar-width: thin;
+    scrollbar-color: #767676 transparent !important;
+}
+
+#countdown
+{
+    position: absolute;
+    font-size: 2rem;    
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #202020;
+    z-index: 999999;
+    padding: 1rem;
+}
+
+#game_over_container
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 24rem;
+}
+
+#game_over_score
+{
+    font-size: 2rem;
+}
+
+#game_over_buttons
+{
+    margin-top: 1rem;
+    font-size: 1.2rem;
+}
+
+.game_over_button
+{
+    cursor: pointer;
+}
+
+.Msg-titlebar, .titlebar_inner_x
+{
+    background-color: #585858 !important;
+    color: #dfdfdf !important;
 }
