--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body, html
 
 #main
 {
-    display: none;
+    display: flex;
     align-items: center;
     justify-content: center;
 }
@@ -163,11 +163,6 @@ body, html
     justify-content: center;
 }
 
-#seed_text
-{
-    cursor: pointer;
-}
-
 #menu
 {
     cursor: pointer;
@@ -239,6 +234,12 @@ body, html
     height: 100vh;
     overflow: hidden;
     background-color: #2D2B2C;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    opacity: 1;
+    transition: opacity 1000ms;
 }
 
 #intro_image
