--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ body, html
 
 .piece_type_periscope_right
 {
-    background: linear-gradient(rgb(255, 189, 66), #705e20);
+    background: linear-gradient(rgb(255, 189, 66), #79520b);
 }
 
 .piece_type_periscope_left
