--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ body, html
 
 #sidebar
 {
-    margin-left: 0.5rem;
+    margin-left: 0.25rem;
     grid-area: sidebar;
     display: flex;
     flex-direction: column;
@@ -416,6 +416,45 @@ body *
     background-color: #202020;
     z-index: 999999;
     padding: 1rem;
+}
+
+#piece_picker
+{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #202020;
+    z-index: 999999;
+    padding: 1rem;
+    display: none;
+    padding: 2rem;
+}
+
+#piece_picker_title
+{
+    margin-bottom: 2rem;
+    text-align: center;
+    font-size: 1.7rem;    
+}
+
+#piece_picker_wheel
+{
+    height: 250px;
+    width: 250px;
+    border-radius: 50%;
+    background-color: #2d2d2d;
+    padding: 2rem;
+    position: relative;
+}
+
+.piece_picker_wheel_item
+{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 999;
 }
 
 #game_over_container
