--- a/css/style.css
+++ b/css/style.css
@@ -501,3 +501,8 @@ body *
     background-color: #585858 !important;
     color: #dfdfdf !important;
 }
+
+.pow_active
+{
+    box-shadow: 0 0 8px #ffffff;
+}
