--- a/css/style.css
+++ b/css/style.css
@@ -100,37 +100,37 @@ body, html
     opacity: 0.3;
 }
 
-.piece_type_stick
+.piece_type_stick, .piece_type_stick_2
 {
     background: linear-gradient(rgb(53, 243, 243), #286b77);
 }
 
-.piece_type_periscope_right
+.piece_type_periscope_right, .piece_type_periscope_right_2
 {
     background: linear-gradient(rgb(255, 189, 66), #79520b);
 }
 
-.piece_type_periscope_left
+.piece_type_periscope_left, .piece_type_periscope_left_2
 {
     background: linear-gradient(rgb(69, 69, 255), #1e2468);
 }
 
-.piece_type_dog_right
+.piece_type_dog_right, .piece_type_dog_right_2
 {
     background: linear-gradient(rgb(0, 255, 0), #1a522a);
 }
 
-.piece_type_dog_left
+.piece_type_dog_left, .piece_type_dog_left_2
 {
     background: linear-gradient(rgb(255, 62, 62), #421111);
 }
 
-.piece_type_square
+.piece_type_square, .piece_type_square_2
 {
     background: linear-gradient(rgb(255, 255, 101), #5a591c);
 }
 
-.piece_type_tee
+.piece_type_tee, .piece_type_tee_2
 {
     background: linear-gradient(rgb(139, 24, 139), #41132c);
 }
@@ -169,7 +169,7 @@ body, html
 
 .cleared_piece
 {
-    background: linear-gradient(rgb(255, 255, 255), #264c55);
+    background: linear-gradient(rgb(255, 255, 255), #4f7c86);
     box-shadow: 0 0 4px rgb(212, 218, 233); 
     animation: fade_out 100ms linear forwards;
 }
