--- a/css/style.css
+++ b/css/style.css
@@ -449,6 +449,20 @@ body *
     padding: 1rem;
 }
 
+#paused
+{
+    position: absolute;
+    font-size: 2rem;    
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #202020;
+    z-index: 999999;
+    padding: 1rem; 
+    display: none;
+    opacity: 0.5;
+}
+
 #piece_picker
 {
     position: absolute;
