--- a/css/style.css
+++ b/css/style.css
@@ -374,9 +374,73 @@ body *
     text-shadow: 0 0 1em currentColor;
 }
 
+#Msg-content-container-options
+{
+    overflow: hidden !important; 
+}
+
 #options_container
 {
-    min-width: 14rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 26rem;
+    overflow: hidden;
+}
+
+#options_sidebar
+{
+    width: 10rem;
+    background-color: #434343;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#options_content
+{
+    height: 100%;
+    width: 22rem;
+    overflow: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.options_category_item
+{
+    font-size: 1.4rem;
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
+    cursor: pointer;
+}
+
+.options_category_item:first-child
+{
+    margin-top: 1rem;
+}
+
+.options_category_item:last-child
+{
+    margin-bottom: 1rem;
+}
+
+.options_category_item_selected
+{
+    text-decoration: underline;
+}
+
+.options_category
+{
+    display: none;
+    max-height: 100%;
+}
+
+#options_category_visual
+{
+    display: block;
 }
 
 .options_number
@@ -409,9 +473,9 @@ body *
     margin-bottom: 2rem;
 }
 
-.options_item:last-child
+.options_item:first-child
 {
-    margin-bottom: 0;
+    margin-top: 2rem;
 }
 
 .options_label
@@ -423,6 +487,8 @@ body *
 {
     cursor: pointer;
     display: inline-block;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .horizontal_separator
