--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 {
     --texture: url(../img/textures/diagmonds-light.png);
     --piece-background-size: 100% auto, cover;
+    --block-shape: 25%;
 }
 
 body, html
@@ -136,7 +137,7 @@ body *
 {
     position: absolute;
     box-shadow: inset 0 0 2px rgb(15, 41, 102);
-    border-radius: 25%;
+    border-radius: var(--block-shape)
 }
 
 .ghost .piece_block
