--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,12 @@
     --background: "";
 }
 
+@font-face
+{
+    font-family: imported_font;
+    src: url(Orbitron-Regular.ttf);
+}
+
 body, html
 {
     margin: 0;
@@ -13,7 +19,7 @@ body, html
     font-size: 18px;
     max-height: 100%;
     max-width: 100%;
-    font-family: monospace;
+    font-family: imported_font;
     height: 100%;
 }
 
