--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 @font-face
 {
     font-family: imported_font;
-    src: url(Orbitron-Regular.ttf);
+    src: url(RobotoMono-Regular.ttf);
 }
 
 body, html
