--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body, html
     font-size: 18px;
     max-height: 100%;
     max-width: 100%;
-    font-family: imported_font;
+    font-family: imported_font, monospace;
     height: 100%;
 }
 
