--- a/css/style.css
+++ b/css/style.css
@@ -340,9 +340,14 @@ body * {
   height: 100%;
   width: 26rem;
   overflow: auto;
+}
+
+#options_content_inner {
+  min-height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-bottom: 20px;
 }
 
 .options_category_item {
